--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,1 +1,18 @@
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
+/* PressStart2P (Regular 400) - акцентный шрифт */
+@font-face {
+  font-family: "PressStart2P";
+  src: url("../fonts/PressStart2P-Regular.woff") format("woff");
+  font-weight: 400;
+  font-display: swap;
+}
+
+/* Inter (вариативный) - основной шрифт */
+@font-face {
+  font-display: swap;
+  font-family: "Inter";
+  src: local("Inter"),
+    url("../fonts/Inter-Variable.woff2") format("woff2 supports variations")
+      url("../fonts/Inter-Variable.woff2") format("woff2-variations");
+  font-weight: 400 700;
+}
