--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,393 @@
 */
 
 .page {
+  place-items: center;
+  min-height: 100vh;
+  font-family: var(--main-font), sans-serif;
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wght" var(--text-weight, 400);
+}
+
+.header {
+  width: var(--header-width);
+  height: 368px;
+  margin: 100px auto;
+  border: 2px solid #000000;
+  background: var(--bg-color);
+
+  @media (width <= 375px) {
+    width: 100%;
+    height: 327px;
+  }
+}
+
+.header__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: var(--header-padding-tb) var(--header-padding-lr);
+  font-family: var(--accent-font), fantasy;
+  text-transform: uppercase;
+}
+
+.header__logo {
+  vertical-align: bottom;
+  font-size: var(--logo-size);
+  line-height: 100%;
+}
+
+.header__text {
+  font-size: var(--text-size);
+  line-height: 100%;
+}
+
+/*К а р т о ч к и*/
+.main {
+  display: grid;
+  place-items: center;
+  gap: 50px;
+  width: 100%;
+  padding-block-end: 105px;
+
+  @media (width <= 375px) {
+    width: 100%;
+  }
+}
+.card {
+  width: var(--card-width);
+  background-color: var(--bg-color);
+
+  @media (width <= 375px) {
+    width: 100%;
+  }
+}
+.card-title {
+  border: 2px solid var(--main-color);
+  padding: 5px 10px;
+  font-size: 18px;
+  font-variation-settings: "wght" var(--title-weight, 700);
+}
+
+/*КАРТИНКА*/
+.block-img {
+  position: relative;
+  margin: 0;
+  border-inline: 2px solid var(--main-color);
+}
+.label-img {
+  position: absolute;
+  top: 22px;
+  right: 25px;
+  opacity: 0.5;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  text-transform: uppercase;
+  mix-blend-mode: hard-light;
+
+  @supports (-webkit-text-stroke: 1px var(--bg-color)) {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--bg-color);
+  }
+
+  @media (width <= 375px) {
+    right: 11px;
+  }
+}
+
+.card-img {
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  aspect-ratio: 1 / 1;
+}
+
+.card-joy {
+  filter: brightness(1.2) saturate(1.5);
+}
+.card-mystery {
+  filter: contrast(1.3) brightness(0.7) sepia(0.2);
+}
+.card-romance {
+  filter: brightness(1.1) contrast(1.1) hue-rotate(-10deg);
+}
+.card-passion {
+  filter: saturate(2) hue-rotate(330deg) contrast(1.5);
+}
+.card-vintage {
+  filter: sepia(0.7) contrast(0.8) brightness(0.9);
+}
+.card-futurism {
+  filter: hue-rotate(90deg) brightness(1.2) saturate(2);
+}
+.card-dream {
+  filter: saturate(3);
+}
+.card-apocalypse {
+  filter: hue-rotate(-10deg);
+}
+
+.content {
+  display: grid;
+  grid-template-rows: minmax(min-content, max-content) 1fr;
+  gap: 25px;
+  padding: 25px;
+  border: 2px solid var(--main-color);
+}
+
+.text-main {
+  min-width: 0;
+  padding-bottom: 27px;
+}
+.text {
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.5px;
+
+  @media (width <= 375px) {
+    padding-right: 7.95px;
+  }
+}
+
+.button {
+  position: relative;
+  border: 2px solid var(--main-color);
+  overflow: hidden;
+}
+
+.button:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--main-color);
+  transition: translate 0.5s ease-in-out;
+  transform-origin: left;
+  translate: -100%;
+}
+
+.button:hover:before {
+  translate: 0%;
+}
+
+.button svg {
+  position: relative;
+  color: var(--bg-color);
+  mix-blend-mode: difference;
+}
+
+.button__text {
+  position: relative;
+  z-index: 10;
+  color: var(--bg-color);
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 150%;
+  text-align: center;
+  mix-blend-mode: difference;
+}
+
+.card__actions {
+  display: flex;
+  justify-content: end;
+  align-items: stretch;
+  gap: 6px;
+}
+
+.card__like-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  height: 38px;
+  border: 2px solid var(--contour-color);
+  padding: 0;
+  background-color: transparent;
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+.card__like-button:focus {
+  box-shadow: 2px 2px 0px 0px var(--contour-color);
+  outline: none;
+}
+
+.card__icon-button {
+  display: flex;
+  justify-content: center;
+  height: 38px;
+  border: 2px solid transparent;
+  padding: 0;
+  background: none;
+  transition: border-color 0.3s ease;
+  cursor: pointer;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: var(--main-color);
+}
+
+/*С Е Р Д Ц Е*/
+.like-icon .contour {
+  fill: var(--contour-color);
+  transition: fill 0.1s linear;
+}
+.like-icon .main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+.like-icon .core {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+.like-icon .sparks {
+  opacity: 0;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s 0.05s linear;
+}
+.like-icon:hover .core {
+  fill: var(--contour-color);
+  transition: fill 0.3s 0.03s linear;
+}
+
+.like-icon:active .main-body,
+.like-icon.is-liked .main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s 0.05s linear;
+}
+.like-icon:active .core,
+.like-icon.is-liked .core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s 0.03s linear;
+}
+
+@keyframes heartScale {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.25);
+    transform-origin: center;
+  }
+}
+
+@keyframes sparksFlash {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.like-icon.is-liked .heart {
+  animation: heartScale 0.3s ease-in 0.1s 1 normal forwards;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s 0.06s linear;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparksFlash 0.3s ease-in 0.3s 1 normal forwards;
+}
+
+.button-save {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  min-width: clamp(306px, 50%, 339px);
+  min-height: 55px;
+  padding: 0;
+
+  @media (width <= 375px) {
+    display: grid;
+    place-items: center;
+    gap: 0;
+    min-height: 85px;
+    padding: 9px 0;
+  }
+}
+
+.button-save .icon {
+  width: 21px;
+  mix-blend-mode: difference;
+
+  @media (width <= 375px) {
+    width: 28px;
+    height: 28px;
+  }
+}
+
+/*Всплывающее окно*/
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 25%;
+  display: grid;
+  display: none;
+  gap: 30px;
+  width: 353px;
+  height: 191px;
+  margin: auto;
+  border: none;
+  padding: 30px;
+  background: var(--bg-color);
+  transform: translate(-50%, -50%);
+  animation: fadeIn 0.3s ease-out;
+
+  @media (width <= 375px) {
+    left: 50%;
+  }
+}
+
+.popup[open] {
+  display: grid;
+  grid-template-rows: 1fr auto;
+}
+
+.popup-content {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 20px;
+}
+
+.popup-content .button__text {
+  text-align: left;
+}
+
+.icon-big {
+  width: 39px;
+  padding: 12px 0;
+}
+
+.button-dialog {
+  text-transform: uppercase;
+}
+.dialog-ok {
+  padding: 5px 0;
+}
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.25);
 }
