--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,27 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: "Inter";
+  --accent-font: "PressStart2P";
+
+  /* Веса для вариативного Inter */
+  --text-weight: 400; /* Основной текст */
+  --title-weight: 700; /* Заголовки */
+
+  --bg-image:repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgba(0 0 0 / 0) 2px 4px), 
+             repeating-linear-gradient(180deg,#d3d3d3 0 2px, rgba(0 0 0 / 0) 2px 4px),
+             linear-gradient(180deg,#e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+   
+
+  --logo-size: clamp(3.0625rem, 2.125rem + 2.6667vw, 4.0625rem);
+  --text-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  --header-width: clamp(375px, 100%, 700px);
+  --header-padding-tb: clamp(7.5rem, 7.3239rem + 0.7512vw, 8rem);
+  --header-padding-lr: clamp(0.875rem, -1.4687rem + 9.9996vw, 7.531rem);
+
+  --card-width: clamp(375px, 100%, 700px);
+  --bg-color: #fff;
+  --main-color: #000;
+
+  --contour-color: #000;
+  --animation-fill-color: #ff0000;
+}
