Отправка на вторую проверку после исправлений

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,6 @@
 
 .page {
   place-items: center;
-  min-height: 100vh;
   font-family: var(--main-font), sans-serif;
   background-color: var(--bg-color);
   background-image: var(--bg-image);
@@ -27,18 +26,9 @@
 
 .header {
   width: var(--header-width);
-  height: 368px;
   margin: 100px auto;
   border: 2px solid #000000;
   background: var(--bg-color);
-
-  @media (width <= 375px) {
-    width: 100%;
-    height: 327px;
-  }
-}
-
-.header__container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -49,6 +39,7 @@
 }
 
 .header__logo {
+  text-decoration: none;
   vertical-align: bottom;
   font-size: var(--logo-size);
   line-height: 100%;
@@ -60,25 +51,26 @@
 }
 
 /*К а р т о ч к и*/
+.like-icon,
+.card__like-button,
+.card__icon-button,
+.is-liked,
+.button__text {
+  cursor: pointer; 
+}
+
 .main {
   display: grid;
   place-items: center;
   gap: 50px;
-  width: 100%;
   padding-block-end: 105px;
-
-  @media (width <= 375px) {
-    width: 100%;
-  }
 }
+
 .card {
   width: var(--card-width);
   background-color: var(--bg-color);
-
-  @media (width <= 375px) {
-    width: 100%;
-  }
 }
+
 .card-title {
   border: 2px solid var(--main-color);
   padding: 5px 10px;
@@ -94,10 +86,10 @@
 }
 .label-img {
   position: absolute;
-  top: 22px;
+  top: 25px;
   right: 25px;
   opacity: 0.5;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy;
   font-size: 14px;
   text-transform: uppercase;
   mix-blend-mode: hard-light;
@@ -108,7 +100,7 @@
   }
 
   @media (width <= 375px) {
-    right: 11px;
+    right: 12px;
   }
 }
 
@@ -121,28 +113,28 @@
   aspect-ratio: 1 / 1;
 }
 
-.card-01 {
+.card-bright {
   filter: brightness(1.2);
 }
-.card-02 {
+.card-contrast {
   filter: contrast(1.3);
 }
-.card-03 {
+.card-opaque {
   filter: opacity(0.8);
 }
-.card-04 {
+.card-grayscale {
   filter: grayscale(0.8);
 }
-.card-05 {
+.card-sepia {
   filter: sepia(0.7);
 }
-.card-06 {
+.card-vibrant {
   filter: hue-rotate(90deg) brightness(1.2) saturate(2);
 }
-.card-07 {
+.card-saturated {
   filter: saturate(3);
 }
-.card-08 {
+.card-cool-tone {
   filter: hue-rotate(-10deg);
 }
 
@@ -153,25 +145,32 @@
   padding: 25px;
   border: 2px solid var(--main-color);
 }
-
-.text-main {
-  min-width: 0;
-  padding-bottom: 27px;
+.card-text {
+  display: flex;
+  flex-direction: column;
+  gap: 27px; 
 }
+
 .text {
   font-size: 18px;
   line-height: 21px;
   letter-spacing: 0.5px;
-
-  @media (width <= 375px) {
-    padding-right: 7.95px;
-  }
 }
 
 .button {
   position: relative;
+  color: var(--bg-color);
+  font-family: var(--accent-font), fantasy;
+  font-size: 14px;
   border: 2px solid var(--main-color);
+  align-items: center;
   overflow: hidden;
+  transition: box-shadow 0.3s ease;
+}
+
+.button:focus-visible{
+  box-shadow: 2px 2px 0px 0px var(--contour-color);
+  outline: none;
 }
 
 .button:before {
@@ -197,11 +196,6 @@
 .button__text {
   position: relative;
   z-index: 10;
-  color: var(--bg-color);
-  font-family: var(--accent-font);
-  font-size: 14px;
-  line-height: 150%;
-  text-align: center;
   mix-blend-mode: difference;
 }
 
@@ -213,23 +207,11 @@
 }
 
 .card__like-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 130px;
-  height: 38px;
-  border: 2px solid var(--contour-color);
-  padding: 0;
-  background-color: transparent;
-  transition: box-shadow 0.3s ease;
-  cursor: pointer;
+  min-width: 130px;
+  background-color: transparent;  
 }
 
-.card__like-button:focus {
-  box-shadow: 2px 2px 0px 0px var(--contour-color);
-  outline: none;
-}
-
+/*С Е Р Д Ц Е*/
 .card__icon-button {
   display: flex;
   justify-content: center;
@@ -237,142 +219,110 @@
   border: 2px solid transparent;
   padding: 0;
   background: none;
-  transition: border-color 0.3s ease;
-  cursor: pointer;
+  transition: border-color 0.3s ease;  
 }
 
 .card__icon-button:focus {
   outline: none;
 }
-
 .card__icon-button:focus-visible {
   border-color: var(--main-color);
 }
 
-/*С Е Р Д Ц Е*/
 .like-icon .contour {
   fill: var(--contour-color);
   transition: fill 0.1s linear;
 }
-.like-icon .main-body {
-  fill: transparent;
-  transition: fill 0.3s linear;
-}
 .like-icon .core {
   fill: transparent;
-  transition: fill 0.3s linear;
+  transition: fill 0.3s ease 0.03s;
+}
+.like-icon .main-body {
+  fill: transparent;
+  transition: fill 0.3s ease;
 }
 .like-icon .sparks {
   opacity: 0;
 }
 
-.like-icon:hover .main-body {
-  fill: var(--contour-color);
-  transition: fill 0.3s 0.05s linear;
-}
 .like-icon:hover .core {
   fill: var(--contour-color);
-  transition: fill 0.3s 0.03s linear;
+  transition: fill 0.3s ease;
+}
+.like-icon:hover .main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s ease 0.05s;
 }
 
-.like-icon:active .main-body,
-.like-icon.is-liked .main-body {
-  fill: var(--animation-fill-color);
-  transition: fill 0.3s 0.05s linear;
-}
 .like-icon:active .core,
 .like-icon.is-liked .core {
   fill: var(--animation-fill-color);
-  transition: fill 0.3s 0.03s linear;
+  transition: fill 0.3s ease 0.03s ;
 }
-
-@keyframes heartScale {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1.25);
-    transform-origin: center;
-  }
+.like-icon:active .main-body,
+.like-icon.is-liked .main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s ease 0.05s;
 }
-
-@keyframes sparksFlash {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-.like-icon.is-liked .heart {
-  animation: heartScale 0.3s ease-in 0.1s 1 normal forwards;
-}
-
 .like-icon.is-liked .contour {
   fill: var(--animation-fill-color);
-  transition: fill 0.3s 0.06s linear;
+  transition: fill 0.3s ease 0.06s;
+}
+
+.like-icon.is-liked {
+  animation: heartPulse 0.3s ease-in-out 0.1s 1 alternate;
 }
 
 .like-icon.is-liked .sparks {
-  animation: sparksFlash 0.3s ease-in 0.3s 1 normal forwards;
+  animation: sparksFlicker 0.3s ease-in 0.3s 1 alternate;
 }
+
+.like-icon:not(.is-liked) .contour {
+  transition: fill 0.1s linear; 
+}
+
 
 .button-save {
   display: inline-flex;
   justify-content: center;
-  align-items: center;
   gap: 8px;
   min-width: clamp(306px, 50%, 339px);
-  min-height: 55px;
-  padding: 0;
-
+  padding: 15px 0;
+  
   @media (width <= 375px) {
     display: grid;
     place-items: center;
-    gap: 0;
-    min-height: 85px;
-    padding: 9px 0;
   }
 }
 
 .button-save .icon {
   width: 21px;
-  mix-blend-mode: difference;
+  
 
   @media (width <= 375px) {
     width: 28px;
-    height: 28px;
   }
 }
 
 /*Всплывающее окно*/
 .popup {
-  position: fixed;
-  top: 50%;
-  left: 25%;
-  display: none;  
+  display: none;
+  gap: 30px;
+  grid-template-rows: 1fr auto;  
   width: 353px;
-  height: 191px;
-  margin: auto;
   border: none;
   padding: 30px;
   background: var(--bg-color);
-  transform: translate(-50%, -50%);
-  animation: fadeIn 0.3s ease-out;
-
+    
   @media (width <= 375px) {
-    left: 50%;
+    width: calc(100% - 24px);
+    padding: 30px 38px;
   }
 }
 
 .popup[open] {
   display: grid;
-  gap: 30px;
-  grid-template-rows: 1fr auto;
+  animation: fadeIn 0.3s ease-out;
 }
 
 .popup-content {
@@ -381,22 +331,27 @@
   align-items: center;
   gap: 20px;
 }
-
-.popup-content .button__text {
+.popup-text{
   text-align: left;
+  text-transform: uppercase;
+  z-index: 10;
+  font-family: var(--accent-font), fantasy;
+  font-size: 14px;
+  line-height: 150%;
 }
 
-.icon-big {
+.popup__icon {
   width: 39px;
   padding: 12px 0;
 }
 
-.button-dialog {
+.popup__button--close {
+  padding: 6.5px 0;
   text-transform: uppercase;
-}
-.dialog-ok {
-  padding: 5px 0;
+  background-color: transparent;
+  line-height: 150%;
 }
 dialog::backdrop {
-  background-color: rgb(0 0 0 / 0.25);
+opacity: 0.75;
+background-color:rgba(0, 0, 0, 1);
 }
